Refactoring following class changes. Used methods that require Java 21